--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/kasir_cafe
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=..\\..\\..\\..\\AbsoluteLayout.jar
-file.reference.AbsoluteLayout.jar-1=..\\..\\..\\..\\..\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-2=E:\\ireport\\ireport\\library\\AbsoluteLayout.jar
+file.reference.commons-beanutils-1.9.4.jar=E:\\commons-beanutils-1.9.4\\commons-beanutils-1.9.4.jar
 file.reference.commons-collections-3.2.1.jar=E:\\ireport\\ireport\\library\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=E:\\ireport\\ireport\\library\\commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=E:\\ireport\\ireport\\library\\commons-logging-1.2.jar
@@ -45,35 +44,13 @@ file.reference.groovy-2.4.5.jar=E:\\ireport\\ireport\\library\\groovy-2.4.5.jar
 file.reference.itext-pdfa-5.5.4.jar=E:\\ireport\\ireport\\library\\itext-pdfa-5.5.4.jar
 file.reference.itextpdf-5.5.4.jar=E:\\ireport\\ireport\\library\\itextpdf-5.5.4.jar
 file.reference.jasperreports-6.0.0.jar=E:\\ireport\\ireport\\library\\jasperreports-6.0.0.jar
-file.reference.js_activation-1.1.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_activation-1.1.jar
-file.reference.js_axis-1.4patched.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_axis-1.4patched.jar
-file.reference.js_commons-codec-1.3.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_commons-codec-1.3.jar
-file.reference.js_commons-discovery-0.2.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_commons-discovery-0.2.jar
-file.reference.js_commons-httpclient-3.1.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_commons-httpclient-3.1.jar
-file.reference.js_jasperserver-common-ws-4.7.1.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_jasperserver-common-ws-4.7.1.jar
-file.reference.js_jaxrpc.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_jaxrpc.jar
-file.reference.js_mail-1.4.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_mail-1.4.jar
-file.reference.js_saaj-api-1.3.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_saaj-api-1.3.jar
-file.reference.js_wsdl4j-1.5.1.jar=..\\..\\..\\..\\..\\ireport 5.6.0\\netbeans\\modules\\ext\\js_wsdl4j-1.5.1.jar
 file.reference.mysql-connector-j-8.0.33.jar=mysql-connector-j-8.0.33.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.AbsoluteLayout.jar}:\
     ${libs.JCalendar.classpath}:\
-    ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.js_activation-1.1.jar}:\
-    ${file.reference.js_axis-1.4patched.jar}:\
-    ${file.reference.js_commons-codec-1.3.jar}:\
-    ${file.reference.js_commons-discovery-0.2.jar}:\
-    ${file.reference.js_commons-httpclient-3.1.jar}:\
-    ${file.reference.js_jasperserver-common-ws-4.7.1.jar}:\
-    ${file.reference.js_jaxrpc.jar}:\
-    ${file.reference.js_mail-1.4.jar}:\
-    ${file.reference.js_saaj-api-1.3.jar}:\
-    ${file.reference.js_wsdl4j-1.5.1.jar}:\
     ${file.reference.AbsoluteLayout.jar-2}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
@@ -81,7 +58,8 @@ javac.classpath=\
     ${file.reference.groovy-2.4.5.jar}:\
     ${file.reference.itext-pdfa-5.5.4.jar}:\
     ${file.reference.itextpdf-5.5.4.jar}:\
-    ${file.reference.jasperreports-6.0.0.jar}
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -128,7 +106,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
